--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
         <div class="container" id="hero">
             <div id="hero-text">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                <button type="button">Sign up</button>    
             </div>
             <div id="img-alt">
                 <img alt="this is a placeholder for an image"/>
@@ -65,6 +66,7 @@
                         Sign up for our product by clicking that button right over there!
                     </p>
                 </div>
+                <button type="button">Sign up</button>
             </div>
         </div>
         
